# sqlc-asyncpg-compat

./: .gitignore  LICENSE  README.md  noxfile.py  pyproject.toml
.github/workflows/: ci.yaml
sqlalchemy/: __init__.py
sqlalchemy/ext/: __init__.py
sqlalchemy/ext/asyncio/: __init__.py
tests/: sqlc.yaml  test_function.py
tests/sql/: models.py  queries.py  queries.sql  schema.sql
